[gd_scene load_steps=10 format=3 uid="uid://csjw1dyl111id"]

[ext_resource type="Script" path="res://scenes/gameplay/map/checkpoint.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://kl8wrv8ptf2c" path="res://assets/sprites/map/star0.png" id="2"]
[ext_resource type="Texture2D" uid="uid://deuv6xvp3fo4h" path="res://assets/sprites/map/checkDone.png" id="3"]
[ext_resource type="AudioStream" uid="uid://bfmlaafqb1pwg" path="res://assets/audio/level-selected.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://ctpirmwpgsaqg" path="res://assets/audio/level-locked.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://bdcacmoy38b6y" path="res://assets/audio/buttonpress.wav" id="6"]

[sub_resource type="CircleShape2D" id="1"]
radius = 50.0

[sub_resource type="Animation" id="2"]
resource_name = "pressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/IconCP:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5viq"]
_data = {
"pressed": SubResource("2")
}

[node name="CheckPoint" type="Node2D"]
script = ExtResource("1")
check_state = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="TouchInput" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("1")

[node name="IconCP" type="Sprite2D" parent="Area2D"]
position = Vector2(18.3848, -2.82843)
texture = ExtResource("3")

[node name="StarsCP" type="Sprite2D" parent="Area2D"]
visible = false
position = Vector2(-22, 56)
texture = ExtResource("2")

[node name="LevelSelectedAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[node name="LevelLocked" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="Pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p5viq")
}

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
